--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next-pwa": "^5.6.0",
     "nodemailer": "^6.8.0",
     "nsfwjs": "^2.4.2",
+    "postgresql": "^0.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.6",
