--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
     "next": "13.0.5",
+    "next-cookie": "^2.8.0",
     "next-pwa": "^5.6.0",
     "nodemailer": "^6.8.0",
     "nsfwjs": "^2.4.2",
